iaac/blueprint/infra/modules/security/pod-security-policies.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pod-security-standards
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
